fixed unaligned table on game index

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,7 +14,3 @@
  *= require_tree .
  *= require_self
  */
-
-.text_center {
-  text-align: center;
-}
